Fix weird wrapping for names in larger modes.

--- a/backend/critterchat/http/static/chat.css
+++ b/backend/critterchat/http/static/chat.css
@@ -846,9 +846,6 @@ div.name-wrapper div.name {
 }
 
 div.meta-wrapper span.name {
-    overflow: hidden;
-    overflow-wrap: break-word;
-    word-break: break-word;
     cursor: pointer;
 }
 
@@ -1040,8 +1037,9 @@ div.conversation div.item div.content-wrapper {
 }
 
 div.conversation div.item div.meta-wrapper {
-    display: flex;
-    flex-direction: row;
+    overflow: hidden;
+    overflow-wrap: break-word;
+    word-break: break-word;
     gap: var(--application-item-padding);
 }
 
@@ -1054,6 +1052,7 @@ div.conversation div.item span.timestamp {
     color: var(--conversation-timestamp);
     font-size: var(--application-text-size-12);
     padding-top: var(--message-timestamp-padding);
+    padding-left: 0.25em;
 }
 
 div.conversation div.item div.message {
